--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,45 @@
-name: Android Build
+name: Android APK Builder
 
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-
-    - name: Grant execute permission for gradlew
+    
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        gradle-version: '8.2'  # ⬅️ حدد إصدار Gradle هنا
+    
+    - name: Make gradlew executable
       run: |
-        # تحقق من وجود gradlew
         if [ -f "gradlew" ]; then
           chmod +x gradlew
         else
-          echo "gradlew not found, using gradle directly"
+          gradle wrapper
+          chmod +x gradlew
         fi
-
-    - name: Build with Gradle
+    
+    - name: Build Debug APK
       run: |
-        if [ -f "gradlew" ]; then
-          ./gradlew assembleDebug
-        else
-          gradle assembleDebug
-        fi
-
+        # حاول بـ Gradle 8.x
+        ./gradlew clean assembleDebug --stacktrace || gradle clean assembleDebug --stacktrace
+    
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug-apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: apk-files
+        path: |
+          app/build/outputs/apk/debug/*.apk
+          app/build/outputs/apk/release/*.apk
+        retention-days: 7
