--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,29 @@
-name: Android APK Builder
+name: Android APK Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main, master, develop ]
+  pull_request:
+    branches: [ main, master ]
+
+env:
+  GRADLE_VERSION: '8.2'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
+    
+    - name: Validate Gradle Wrapper
+      run: |
+        if [ ! -f "gradle/wrapper/gradle-wrapper.properties" ]; then
+          echo "Generating Gradle wrapper..."
+          gradle wrapper --gradle-version=$GRADLE_VERSION
+        fi
+        sed -i "s|distributionUrl=.*|distributionUrl=https\\://services.gradle.org/distributions/gradle-$GRADLE_VERSION-all.zip|g" gradle/wrapper/gradle-wrapper.properties
     
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -16,30 +31,31 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+    - name: Cache Gradle dependencies
+      uses: actions/cache@v3
       with:
-        gradle-version: '8.2'  # ⬅️ حدد إصدار Gradle هنا
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
     
     - name: Make gradlew executable
-      run: |
-        if [ -f "gradlew" ]; then
-          chmod +x gradlew
-        else
-          gradle wrapper
-          chmod +x gradlew
-        fi
+      run: chmod +x ./gradlew
     
-    - name: Build Debug APK
-      run: |
-        # حاول بـ Gradle 8.x
-        ./gradlew clean assembleDebug --stacktrace || gradle clean assembleDebug --stacktrace
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
     
-    - name: Upload APK
+    - name: Build APK with Gradle
+      run: |
+        ./gradlew clean
+        ./gradlew assembleDebug --no-daemon --stacktrace
+    
+    - name: Upload APK artifact
+      if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: apk-files
-        path: |
-          app/build/outputs/apk/debug/*.apk
-          app/build/outputs/apk/release/*.apk
-        retention-days: 7
+        name: android-apk
+        path: app/build/outputs/apk/debug/*.apk
+        retention-days: 30
