Modify gradle-wrapper.properties for Gradle 8.2
Updated Gradle wrapper properties for version 8.2.

--- a/gradle-wrapper.properties
+++ b/gradle-wrapper.properties
@@ -1,7 +1,5 @@
-Enter# Gradle configuration
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m
-org.gradle.parallel=true
-org.gradle.daemon=true
-android.useAndroidX=true
-android.enableJetifier=true
-kotlin.code.style=official
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
